<project>
    <modelVersion>4.0.0</modelVersion>
    <parent>
        <groupId>com.espertech</groupId>
        <artifactId>esper-examples-parent</artifactId>
        <version>9.0.0</version>
    </parent>
    <properties>
        <rootPath>${project.parent.parent.basedir}</rootPath>
    </properties>
    <name>Esper Examples - Benchmark</name>
    <artifactId>esper_examples_benchmark</artifactId>
    <packaging>jar</packaging>
    <description>Esper Example Benchmark</description>
    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-jar-plugin</artifactId>
                <version>${maven.jar.plugin.version}</version>
                <configuration>
                    <archive>
                        <manifestEntries>
                            <Built-By>EsperTech</Built-By>
                        </manifestEntries>
                    </archive>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>${maven.compiler.plugin.version}</version>
                <configuration>
                    <source>17</source>
                    <target>17</target>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>${maven.surefire.plugin.version}</version>
                <configuration>
                    <argLine>-Dlog4j.configuration=../etc/log4j.xml</argLine>
                    <argLine>-Xms256m -Xmx256m</argLine>
                    <systemProperties>
                        <property>
                            <name>log4j.configuration</name>
                            <value>log4j.xml</value>
                        </property>
                    </systemProperties>
                </configuration>
            </plugin>
        </plugins>
        <testResources>
            <testResource>
                <directory>etc</directory>
            </testResource>
        </testResources>
    </build>
</project>
